ENYO-3017: fix alignement problem for ares grabber

--- a/ares/ares-rules.less
+++ b/ares/ares-rules.less
@@ -172,6 +172,9 @@
 .ares-top-toolbar.ares-designer-panels>div {
 	margin : 0 1px;
 }
+.ares-designer-panels > .enyo-fittable-columns-layout.onyx-toolbar-inline > * {
+	vertical-align: inherit;
+}
 
 .onyx-toolbar .onyx-button.ares-toolbar-picker{
 	border: 1px solid @ares-toolbar-background ;
